--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 flask = "^3.0.3"
-keras = "^3.3.3"
-tensorflow = "^2.16.1"
-dvc = { extras = ["gdrive"], version = "^3.50.1" }
 lib-ml = { git = "https://github.com/remla24-team7/lib-ml.git", tag = "v0.1.0" }
+
+[tool.poetry.group.dev.dependencies]
+dvc = { extras = ["gdrive"], version = "^3.50.1" }
 
 [build-system]
 requires = ["poetry-core"]
