--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^3.0.3"
 lib-ml = { git = "https://github.com/remla24-team7/lib-ml.git", tag = "v0.1.0" }
 
 [tool.poetry.group.dev.dependencies]
+tensorflow = "^2.16.1"
 dvc = { extras = ["gdrive"], version = "^3.50.1" }
 
 [build-system]
