Add metrics for app usage with Prometheus

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.10"
 flask = "^3.0.3"
 lib-ml = { git = "https://github.com/remla24-team7/lib-ml.git", tag = "v0.1.0" }
+prometheus-flask-exporter = "^0.23.0"
 
 [tool.poetry.group.dev.dependencies]
 tensorflow = "^2.16.1"
