--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 flask = "^3.0.3"
 lib-ml = { git = "https://github.com/remla24-team7/lib-ml.git", tag = "v0.1.1" }
 prometheus-flask-exporter = "^0.23.0"
+flasgger = "^0.9.7.1"
 
 [tool.poetry.group.dev.dependencies]
 tensorflow = "^2.16.1"
